Fix Bootstrap theme Fix images alignment

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 .logo {
     max-height: 30px;
 }
-body .content {
+.body {
     padding: 80px 15px 0px;
 }
 html {
